Removed errorneous DCHECK from TaskManager SharedSampler code

The DCHECK could be triggered if sampling of results by SharedSampler on
background thread took longer than refresh cycle (1 second) and at the
same time user added or removed one of TaskManager columns handled by
SharedSampler.

This DCHECK was an errorneous assumption. I removed it and added a comment
explaining this situation.

BUG=678471

Review-Url: https://codereview.chromium.org/2612773004
Cr-Commit-Position: refs/heads/master@{#441958}

Former-commit-id: 929f43478f9acb732ce04c4a1209cf3cd1b7a582